--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
                    de seus clientes, criando projetos personalizados, unindo a tradição <br>
                    e a modernidade em nossos projetos</p>
             </div>
-            <img src="imagens/casa.svg" alt="ERROR" id="img">
+            <img src="casa.svg" alt="ERROR" id="img">
         </div>
         <!--menu formulario-->
         <div id="formulario">
